syntax = "proto3";
package blue_box.file_meta.grpc;

// Request for metadata about a file with a given ID.
message FileRequest {
  int32 Id = 1;
}

// Metadata about a specific file
message File {
  int32 Id = 1;
  repeated Part parts = 2;
}

// Metadata about a specific file part
message Part {
  int32 Id = 1;
  string BlockId = 2;
}

// CRUD operations on the File domain.
service FileMeta {
  // Retrieve metadata about a file with a given ID.
  rpc GetFileRecord(FileRequest) returns (File) {}
}
